testdata/baselines/reference/compiler/packageJsonImportsWildcardNoCrash.errors.txt
packageJsonImportsWildcardNoCrash(1,1): error TS1128: Declaration or statement expected.
packageJsonImportsWildcardNoCrash(1,1): error TS1128: Declaration or statement expected.
packageJsonImportsWildcardNoCrash(1,8): error TS1128: Declaration or statement expected.
packageJsonImportsWildcardNoCrash(1,16): error TS1005: '}' expected.
packageJsonImportsWildcardNoCrash(1,16): error TS1005: ';' expected.
packageJsonImportsWildcardNoCrash(1,16): error TS1128: Declaration or statement expected.
packageJsonImportsWildcardNoCrash(1,16): error TS1128: Declaration or statement expected.
packageJsonImportsWildcardNoCrash(1,24): error TS1128: Declaration or statement expected.
packageJsonImportsWildcardNoCrash(1,24): error TS1005: ';' expected.
packageJsonImportsWildcardNoCrash(1,24): error TS1128: Declaration or statement expected.
packageJsonImportsWildcardNoCrash(1,24): error TS1005: '}' expected.

==== packageJsonImportsWildcardNoCrash (11 errors) ====
    
src/a.ts(1,1): error TS1128: Declaration or statement expected.
src/a.ts(1,1): error TS1128: Declaration or statement expected.
src/a.ts(1,8): error TS1128: Declaration or statement expected.
src/a.ts(1,16): error TS1005: '}' expected.
src/a.ts(1,16): error TS1005: ';' expected.
src/a.ts(1,16): error TS1128: Declaration or statement expected.
src/a.ts(1,16): error TS1128: Declaration or statement expected.
src/a.ts(1,24): error TS1128: Declaration or statement expected.
src/a.ts(1,24): error TS1005: ';' expected.
src/a.ts(1,24): error TS1128: Declaration or statement expected.
src/a.ts(1,24): error TS1005: '}' expected.

==== src/a.ts (11 errors) ====
    import * as b from "#/b.";
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
           ~
!!! error TS1128: Declaration or statement expected.
                   ~
!!! error TS1005: '}' expected.
                   ~
!!! error TS1005: ';' expected.
                   ~
!!! error TS1128: Declaration or statement expected.
                   ~
!!! error TS1128: Declaration or statement expected.
                           ~
!!! error TS1128: Declaration or statement expected.
                           ~
!!! error TS1005: ';' expected.
                           ~
!!! error TS1128: Declaration or statement expected.
                           ~
!!! error TS1005: '}' expected.
    
    b.foo();
    
src/b.ts(1,1): error TS1128: Declaration or statement expected.
src/b.ts(1,1): error TS1128: Declaration or statement expected.
src/b.ts(1,8): error TS1128: Declaration or statement expected.
src/b.ts(1,16): error TS1005: '}' expected.
src/b.ts(1,16): error TS1005: ';' expected.
src/b.ts(1,16): error TS1128: Declaration or statement expected.
src/b.ts(1,16): error TS1128: Declaration or statement expected.
src/b.ts(1,24): error TS1128: Declaration or statement expected.
src/b.ts(1,24): error TS1005: ';' expected.
src/b.ts(1,24): error TS1128: Declaration or statement expected.
src/b.ts(1,24): error TS1005: '}' expected.

==== src/b.ts (11 errors) ====
    export function foo() {}
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
           ~
!!! error TS1128: Declaration or statement expected.
                   ~
!!! error TS1005: '}' expected.
                   ~
!!! error TS1005: ';' expected.
                   ~
!!! error TS1128: Declaration or statement expected.
                   ~
!!! error TS1128: Declaration or statement expected.
                           ~
!!! error TS1128: Declaration or statement expected.
                           ~
!!! error TS1005: ';' expected.
                           ~
!!! error TS1128: Declaration or statement expected.
                           ~
!!! error TS1005: '}' expected.
    
package.json(1,1): error TS1128: Declaration or statement expected.
package.json(1,1): error TS1128: Declaration or statement expected.
package.json(2,6): error TS1128: Declaration or statement expected.
package.json(2,14): error TS1005: '}' expected.
package.json(2,14): error TS1005: ';' expected.
package.json(2,14): error TS1128: Declaration or statement expected.
package.json(2,14): error TS1128: Declaration or statement expected.
package.json(3,5): error TS1128: Declaration or statement expected.
package.json(3,5): error TS1005: ';' expected.
package.json(3,5): error TS1128: Declaration or statement expected.
package.json(3,5): error TS1005: '}' expected.

==== package.json (11 errors) ====
    {
    ~~
!!! error TS1128: Declaration or statement expected.
    ~~
!!! error TS1128: Declaration or statement expected.
        "imports": {
         ~
!!! error TS1128: Declaration or statement expected.
                 ~
!!! error TS1005: '}' expected.
                 ~
!!! error TS1005: ';' expected.
                 ~
!!! error TS1128: Declaration or statement expected.
                 ~
!!! error TS1128: Declaration or statement expected.
            "#/*": {
        ~
!!! error TS1128: Declaration or statement expected.
        ~
!!! error TS1005: ';' expected.
        ~
!!! error TS1128: Declaration or statement expected.
        ~
!!! error TS1005: '}' expected.
                "types": "./src/*ts",
                "default": "./dist/*js"
            }
        }
    }
    
tsconfig.json(1,1): error TS1128: Declaration or statement expected.
tsconfig.json(1,1): error TS1128: Declaration or statement expected.
tsconfig.json(2,6): error TS1128: Declaration or statement expected.
tsconfig.json(2,14): error TS1005: '}' expected.
tsconfig.json(2,14): error TS1005: ';' expected.
tsconfig.json(2,14): error TS1128: Declaration or statement expected.
tsconfig.json(2,14): error TS1128: Declaration or statement expected.
tsconfig.json(2,22): error TS1128: Declaration or statement expected.
tsconfig.json(2,22): error TS1005: ';' expected.
tsconfig.json(2,22): error TS1128: Declaration or statement expected.
tsconfig.json(2,22): error TS1005: '}' expected.

==== tsconfig.json (11 errors) ====
    {
    ~~
!!! error TS1128: Declaration or statement expected.
    ~~
!!! error TS1128: Declaration or statement expected.
        "compilerOptions": {
         ~
!!! error TS1128: Declaration or statement expected.
                 ~
!!! error TS1005: '}' expected.
                 ~
!!! error TS1005: ';' expected.
                 ~
!!! error TS1128: Declaration or statement expected.
                 ~
!!! error TS1128: Declaration or statement expected.
                         ~
!!! error TS1128: Declaration or statement expected.
                         ~
!!! error TS1005: ';' expected.
                         ~
!!! error TS1128: Declaration or statement expected.
                         ~
!!! error TS1005: '}' expected.
            "module": "nodenext",
            "moduleResolution": "nodenext",
            "rootDir": "src",
            "outDir": "dist"
        },
        "include": ["src"]
    }
    
